--- a/SigaaBiblio/res/layout/activity_menu.xml
+++ b/SigaaBiblio/res/layout/activity_menu.xml
@@ -97,7 +97,8 @@
                     android:id="@+id/button3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Renovação" />
+                    android:text="Renovação"
+                    android:onClick="emprestimosRenovaveis" />
 
                 <Button
                     android:id="@+id/button4"
