--- a/SigaaBiblio/res/layout/settings.xml
+++ b/SigaaBiblio/res/layout/settings.xml
@@ -1,26 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 	<CheckBoxPreference
-	    android:key="music"
+	    android:key="lembrarLogin"
 		android:title="@string/lembrar"
 		android:summary="@string/lembrar_texto"
 		android:defaultValue="false" />
 	<CheckBoxPreference
-	    android:key="hints"
+	    android:key="cores"
 		android:title="@string/cor"
 		android:summary="@string/cor_texto"
 		android:defaultValue="false" />
 	
 	<CheckBoxPreference
-	    android:key="hints"
+	    android:key="guardarHistorico"
 		android:title="@string/guardarHist"
 		android:summary="@string/guardar_texto"
 		android:defaultValue="false" />
 	
 	<CheckBoxPreference
-	    android:key="hints"
-		android:title="@string/guardarPesquisas"
+	    android:key="guardarPesquisa"
+		android:title="@string/guardarCamposPesquisas"
 		android:summary="@string/pesquisas_texto"
+		android:defaultValue="false" />
+	
+	<CheckBoxPreference
+	    android:key="guardarDadosPesquisa"
+		android:title="@string/guardarPesquisa"
+		android:summary="@string/guardar_pesquisa_texto"
 		android:defaultValue="false" />
 	
 	
