--- a/SigaaBiblio/res/menu/menu.xml
+++ b/SigaaBiblio/res/menu/menu.xml
@@ -1,9 +1,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
-
+<!-- android:orderInCategory="100" -->
     <item
         android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="Configurações"
-		android:alphabeticShortcut="s"/>
+        android:title="@string/configuracoes_title"
+		android:alphabeticShortcut="@string/configuracoes_atalho"/>
 
 </menu>
