--- a/SigaaBiblio/res/layout/activity_menu.xml
+++ b/SigaaBiblio/res/layout/activity_menu.xml
@@ -120,7 +120,8 @@
                     android:id="@+id/button6"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Sair" />
+                    android:text="Sair"
+                    android:onClick="mudarUsuario" />
             </br.nti.SigaaBiblio.layouts.DashboardLayout>
         </LinearLayout>
 
