--- a/SigaaBiblio/res/layout/activity_selecionar_historico.xml
+++ b/SigaaBiblio/res/layout/activity_selecionar_historico.xml
@@ -62,6 +62,10 @@
 	         android:layout_margin="7dp"
 	         android:ems="10"
 	         android:inputType="date"
+	         android:clickable="false" 
+        android:cursorVisible="false" 
+        android:focusable="false" 
+        android:focusableInTouchMode="false"
 	          >
 
 	         <requestFocus />
@@ -99,7 +103,11 @@
 	         android:layout_margin="7dp"
 	         android:layout_weight="0.12"
 	         android:ems="10"
-	         android:inputType="date" >
+	         android:inputType="date"
+	         android:clickable="false" 
+        	 android:cursorVisible="false" 
+        	android:focusable="false" 
+        	android:focusableInTouchMode="false" >
 
 	         <requestFocus />
 	     </EditText>
