--- a/SigaaBiblio/res/menu/busca_livro.xml
+++ b/SigaaBiblio/res/menu/busca_livro.xml
@@ -1,8 +1,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 <!-- android:showAsAction="never" -->
-    <item
-        android:id="@+id/action_settings"
+      <item
+        android:id="@+id/cambridge_search"
         android:orderInCategory="100"
-        android:title="@string/action_settings"/>
+        android:title="Pesquisar na Biblioteca de Cambridge"
+        android:alphabeticShortcut="r"
+        />
+     <item
+        android:id="@+id/action_settings"
+        android:title="@string/configuracoes_title"
+		android:alphabeticShortcut="@string/configuracoes_atalho"/>
 
 </menu>
